Add e2e successful flow, mongodb, prices data seed
